app/assets/stylesheets/bootstrap_and_overrides.scss
html {
  position: relative;
  min-height: 100%;
}

body {
  padding-top: 50px;
  @media (min-width: 768px) {
    margin-bottom: 220px;
  }
  margin-bottom: 309px;
}

.site-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  @media (min-width: 768px) {
    height: 200px
  }
  height: 289px;
  padding: 1em 0;
  background-color: #f5f5f5;
}

.sign_in {
  max-width: 500px;
  margin: 50px auto;
  text-align: center;
}

.alert {
  margin-top: 20px;
}


.text-muted a {
  color: #777;
}

.navbar-brand {
  letter-spacing: 1px;

  .navbar-default & {
    color: #555;
  }
}

.jumbotron p {
  font-weight: normal;
}

